--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <hr class="line">
             <div class="offcanvas-body-link text-center mb-4">
-                <a href="About.html">About</a>
+                <a href="about.html">About</a>
             </div>
             <hr class="line">
             <div class="offcanvas-body-link text-center mb-4">
