--- a/credits.html
+++ b/credits.html
@@ -111,7 +111,7 @@
 
 
             <div class="sidebar-logo mb-3">
-                <img src="assets/images/banner/sidebar-logo.png" alt="">
+                <a href="index.html"><img src="assets/images/banner/sidebar-logo.png" alt=""></a>
             </div>
 
             <div class="sidebar-icon d-flex flex-column align-items-center">
