--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
     <!-- navbar-section start -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar  navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <div class="logo">
                 <a href="#"><img src="assets/images/banner/logo.png" alt=""></a>
@@ -145,7 +145,7 @@
 
 
             <div class="sidebar-logo mb-3">
-                <img src="assets/images/banner/sidebar-logo.png" alt="">
+                <a href="index.html"><img src="assets/images/banner/sidebar-logo.png" alt=""></a>
             </div>
 
             <div class="sidebar-icon d-flex flex-column align-items-center">
