--- a/services.html
+++ b/services.html
@@ -83,7 +83,7 @@
 
             <div class="item position-relative">
                 <div class="banner-img ">
-                    <img src="assets/images/about/about-page-banner.jpg" alt="">
+                    <img src="assets/images/services-page/banner.webp" alt="">
 
                     <div class="banner-info container">
                         <h2>Services</h2>
@@ -111,7 +111,7 @@
 
 
             <div class="sidebar-logo mb-3">
-                <img src="assets/images/banner/sidebar-logo.png" alt="">
+                <a href="index.html"><img src="assets/images/banner/sidebar-logo.png" alt=""></a>
             </div>
 
             <div class="sidebar-icon d-flex flex-column align-items-center">
@@ -127,6 +127,175 @@
 
     <!-- banner-section-end -->
 
+
+    <!-- main-services-info section start -->
+    <div class="main-services-info mt-5">
+        <div class="container">
+
+            <div class="row align-items-center mb-5">
+                <!-- Text Section -->
+                <div class="col-lg-6 order-1 order-lg-2 mb-4">
+                    <div class="secvice-info-tittle">
+                        <h4>1. Digital Imaging Technician or DIT</h4>
+                        <p class="mb-2">Our DITs will look after your viewing experience onset, all media deliveries &
+                            colour management.</p>
+                        <p class="mb-2">We work with all camera types, resolutions, formats, codecs, log, raw or
+                            compressed formats.</p>
+                        <p class="mb-2">We provide various forms of media management, verification & data security.</p>
+                        <p class="mb-2">We maintain exposure using vector scopes, waveforms & histograms.</p>
+                        <p class="mb-2">All of our monitors are calibrated to REC 709, DCI P3 or specific colour space
+                            requirements.</p>
+                        <p class="mb-2">We apply creative looks, develop LUTs & use CDLs for corrections or creative
+                            intentions.</p>
+                        <p class="mb-2">We use colour charts / focus charts / grey scale & frame leader charts for
+                            accuracy.</p>
+                    </div>
+                </div>
+
+                <!-- Image Section -->
+                <div class="col-lg-6 order-2 order-lg-1">
+                    <div class="main-service text-center">
+                        <img src="assets/images/services-page/img4.webp" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row align-items-center mb-5">
+                <!-- Text Section -->
+                <div class="col-lg-6  mb-4">
+                    <div class="secvice-info-tittle">
+                        <h4>2. Video Playback</h4>
+                        <p class="mb-2">Our video playback systems are based on the industry standard Qtake.</p>
+                        <p class="mb-2">We can record & playback upto 8 cameras simultaneously.</p>
+                        <p class="mb-2">We can have multiple units shooting in different locations at the same time.</p>
+                        <p class="mb-2">Each with media shared instantly via Qtake Server and Starlink internet.</p>
+                        <p class="mb-2">Our range of portable recorders are the cheaper alternative to Qtake.</p>
+                        <p class="mb-2">Nektar have various wireless hand-held directors monitors to suit your needs.
+                        </p>
+                        <p class="mb-2">We can supply video village set ups for directors of any scale.</p>
+                        <p class="mb-2">Mobile battery powered Qtake system for tough location jobs.</p>
+                        <p class="mb-2">We use Qtake streaming to iPad for crew viewing onset.</p>
+                        <p class="mb-2">We have used our kits all over NZ, Australia & the World. </p>
+                        <p class="mb-2">Our routine is compatible with other systems globally…</p>
+                    </div>
+                </div>
+
+                <!-- Image Section -->
+                <div class="col-lg-6 ">
+                    <div class="main-service text-center">
+                        <img src="assets/images/services-page/img2.webp" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row align-items-center mb-5">
+                <!-- Text Section -->
+                <div class="col-lg-6 order-1 order-lg-2 mb-4">
+                    <div class="secvice-info-tittle">
+                        <h4>3. Data Management</h4>
+                        <p class="mb-2">Nektar will ensure your camera media is backed up fast and securely.</p>
+                        <p class="mb-2">As well as backing up, we also verify that the copies are exactly the same as
+                            recorded by your camera system.</p>
+                        <p class="mb-2">We can hold months of footage onset for immediate access.</p>
+                        <p class="mb-2">We use very fast, reliable & secure, latest generation Raid drives.</p>
+                        <p class="mb-2">We also offer transcoding & processing of your media for editorial purposes.</p>
+                        <p class="mb-2">Plus we can create dailies media at the same time – all colour corrected, sound
+                            sync’d & checked.</p>
+                        <p class="mb-2">We have long term storage options available too, if you don’t plan to edit and
+                            deliver right away.</p>
+                        <p class="mb-2">LTO tape back up is safest & most efficient way to store media long term.p>
+                    </div>
+                </div>
+
+                <!-- Image Section -->
+                <div class="col-lg-6 order-2 order-lg-1">
+                    <div class="main-service text-center">
+                        <img src="assets/images/services-page/img3.webp" alt="">
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="main-services-info-base">
+                        <p class="mb-3">Here are some of the Cameras we regularly work with :</p>
+                        <ul>
+                            <li>Arri Alexa 65 / 35 / AlexaLF / Mini-LF / Amira</li>
+                            <li>RED Epic / Dragon / Helium / Weapon</li>
+                            <li>Panasonic Vari-cam</li>
+                            <li>Sony A7s / F3 / F5 / F7 / Venice1 & 2</li>
+                            <li>Canon 5D / 7D / 1DX</li>
+                            <li>GoPro & VR 360 camera rigs</li>
+                            <li>3-ality stereo rigs</li>
+                            <li>Drones – big & small</li>
+                            <li>Phantom flex 4k / Bolt / high-speed camera systems </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="main-services-info-base">
+                        <p class="mb-3">Here are some of our other services to consider:</p>
+                        <ul>
+                            <li>Dailies service</li>
+                            <li>Quality control integrity checks</li>
+                            <li>Sound syncing</li>
+                            <li>Metadata collection</li>
+                            <li>Online dailies to cloud delivery service</li>
+                            <li>Dailies screening service
+
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="main-services-info-base2 mt-4">
+                <h4>Feeling confused?</h4>
+                <p>The role of DIT is relatively new and constantly developing.</p>
+                <p class="mb-2">We thought we’d clarify a few different routines that our DIT’s normally offer.
+                </p>
+                <h4>Shooting on one Camera is most common, but more cameras can be managed. One deliverable is usually
+                    requested – typically Avid DNxHD or ProRes. </h4>
+                <ul>
+                    <li>The DIT role can be combined with video, if the shooting plans are complimentary. </li>
+                    <li>DIT applies sync’d sound and colour adjustments.</li>
+                    <li>If creative looks need to be developed, this should ideally happen during prep period.</li>
+                </ul>
+
+                <h5>Shooting 1 or 2 cameras is common. </h5>
+                <h4>The DIT would be based near set – managing all media from the cameras, handling back ups to secure
+                    drives, adding colour adjustments, sync sound, and metadata inclusion. </h4>
+                <ul>
+                    <li>Two deliverables are usually required – typically Avid DNxHD or ProRes for editorial.And dailies version for DIR and DOP viewing. </li>
+                    <li>A dailies cloud delivery service can easily be arranged.</li>
+                </ul>
+
+                <h4>Shooting 2 or more cameras is common.</h4>
+                <ul>
+                    <li>The DIT is based onset right near cameras. </li>
+                    <li>Wireless links provided to each camera. </li>
+                    <li>Using LiveGrade to apply LUTs and CDLs, maintaining the look of the project. 
+                    </li>
+                    <li>We manage the DOPs viewing experience. 
+                    </li>
+                    <li>Working in either REC709, DCIP3, HDR or SDR colour spaces.</li>
+                    <li>Collecting frame grabs for lighting reference, with metadata included. </li>
+                    <li>Creating camera set up files, frame lines, frame leaders, focus and exposure management. Editorial and Dailies media created by a separate offset DIT.</li>
+                    <li>These are simply guidelines to how we often work.</li>
+                    <li>Feel free to ask for more details about any of these service</li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
+
+
+    <!-- main-services-info section start -->
 
 
     <div class="footer-section mt-5">
@@ -184,11 +353,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
