--- a/credits.html
+++ b/credits.html
@@ -68,7 +68,7 @@
             </div>
             <hr class="line">
             <div class="offcanvas-body-link text-center mb-4">
-                <a href="#">Contact Us</a>
+                <a href="index.html#contact_bx">Contact Us</a>
             </div>
             <hr class="line">
         </div>
@@ -296,19 +296,19 @@
 
                     <div class="footer-links-main d-flex justify-content-between">
                         <div class="footer-links link1">
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </div>
                         <div class="footer-links link1">
-                            <a href="#">About us</a>
+                            <a href="about.html">About us</a>
                         </div>
                         <div class="footer-links link1">
-                            <a href="#">Services</a>
+                            <a href="services.html">Services</a>
                         </div>
                         <div class="footer-links link1">
-                            <a href="#">Credits</a>
+                            <a href="credits.html">Credits</a>
                         </div>
                         <div class="footer-links">
-                            <a href="#">Contact us</a>
+                            <a href="index.html#contact_bx">Contact us</a>
                         </div>
                     </div>
 
