--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
             </div>
             <hr class="line">
             <div class="offcanvas-body-link text-center mb-4">
-                <a href="#">Contact Us</a>
+                <a href="index.html#contact_bx">Contact Us</a>
             </div>
             <hr class="line">
         </div>
@@ -267,7 +267,8 @@
                 <h4>The DIT would be based near set – managing all media from the cameras, handling back ups to secure
                     drives, adding colour adjustments, sync sound, and metadata inclusion. </h4>
                 <ul>
-                    <li>Two deliverables are usually required – typically Avid DNxHD or ProRes for editorial.And dailies version for DIR and DOP viewing. </li>
+                    <li>Two deliverables are usually required – typically Avid DNxHD or ProRes for editorial.And dailies
+                        version for DIR and DOP viewing. </li>
                     <li>A dailies cloud delivery service can easily be arranged.</li>
                 </ul>
 
@@ -275,13 +276,14 @@
                 <ul>
                     <li>The DIT is based onset right near cameras. </li>
                     <li>Wireless links provided to each camera. </li>
-                    <li>Using LiveGrade to apply LUTs and CDLs, maintaining the look of the project. 
+                    <li>Using LiveGrade to apply LUTs and CDLs, maintaining the look of the project.
                     </li>
-                    <li>We manage the DOPs viewing experience. 
+                    <li>We manage the DOPs viewing experience.
                     </li>
                     <li>Working in either REC709, DCIP3, HDR or SDR colour spaces.</li>
                     <li>Collecting frame grabs for lighting reference, with metadata included. </li>
-                    <li>Creating camera set up files, frame lines, frame leaders, focus and exposure management. Editorial and Dailies media created by a separate offset DIT.</li>
+                    <li>Creating camera set up files, frame lines, frame leaders, focus and exposure management.
+                        Editorial and Dailies media created by a separate offset DIT.</li>
                     <li>These are simply guidelines to how we often work.</li>
                     <li>Feel free to ask for more details about any of these service</li>
                 </ul>
@@ -329,19 +331,19 @@
 
                     <div class="footer-links-main d-flex justify-content-between">
                         <div class="footer-links link1">
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </div>
                         <div class="footer-links link1">
-                            <a href="#">About us</a>
+                            <a href="about.html">About us</a>
                         </div>
                         <div class="footer-links link1">
-                            <a href="#">Services</a>
+                            <a href="services.html">Services</a>
                         </div>
                         <div class="footer-links link1">
-                            <a href="#">Credits</a>
+                            <a href="credits.html">Credits</a>
                         </div>
                         <div class="footer-links">
-                            <a href="#">Contact us</a>
+                            <a href="index.html#contact_bx">Contact us</a>
                         </div>
                     </div>
 
