--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <hr class="line">
             <div class="offcanvas-body-link text-center mb-4">
-                <a href="#">Contact Us</a>
+                <a href="index.html#contact_bx">Contact Us</a>
             </div>
             <hr class="line">
         </div>
@@ -487,7 +487,7 @@
 
     <!-- contact-section start -->
 
-    <div class="contact-section">
+    <div class="contact-section" id="contact_bx">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4">
@@ -609,19 +609,19 @@
 
                     <div class="footer-links-main d-flex justify-content-between">
                         <div class="footer-links link1">
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </div>
                         <div class="footer-links link1">
-                            <a href="#">About us</a>
+                            <a href="about.html">About us</a>
                         </div>
                         <div class="footer-links link1">
-                            <a href="#">Services</a>
+                            <a href="services.html">Services</a>
                         </div>
                         <div class="footer-links link1">
-                            <a href="#">Credits</a>
+                            <a href="credits.html">Credits</a>
                         </div>
                         <div class="footer-links">
-                            <a href="#">Contact us</a>
+                            <a href="index.html#contact_bx">Contact us</a>
                         </div>
                     </div>
 
